--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/bg\ phone.png);
+        background-image: url(bg phone,png);
     }
     .header-text{
         margin-top: 100%;
